objects/FSL__SchedulingRecipe__c.object
<CustomObject>
    <fields>
        <fullName>FSL__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Criteria__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Criteria</label>
        <referenceTo>FSL__Criteria__c</referenceTo>
        <relationshipLabel>Scheduling Recipes</relationshipLabel>
        <relationshipName>Scheduling_Recipes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSL__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FSL__Expected_Behavior__c</fullName>
        <label>Expected Behavior</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FSL__LKL_Threshold__c</fullName>
        <defaultValue>15</defaultValue>
        <label>Last Known Location Threshold</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__Post_Actions__c</fullName>
        <label>Post Actions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FSL__Priority__c</fullName>
        <label>Priority</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__Scenario_Specific__c</fullName>
        <defaultValue>15</defaultValue>
        <label>Scenario Specific</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__Scenario_Type__c</fullName>
        <label>Scenario Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SA Canceled</fullName>
                    <default>true</default>
                    <label>SA Canceled</label>
                </value>
                <value>
                    <fullName>SA Shortened</fullName>
                </value>
                <value>
                    <fullName>Overlap (SA Lengthened)</fullName>
                </value>
                <value>
                    <fullName>Overlap (Post-Emergency Scheduling)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSL__Scheduling_Policy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Scheduling Policy</label>
        <referenceTo>FSL__Scheduling_Policy__c</referenceTo>
        <relationshipLabel>Scheduling Recipes</relationshipLabel>
        <relationshipName>Scheduling_Recipes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSL__Semi_Automated__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Semi Automated</label>
        <type>Checkbox</type>
    </fields>
    <label>Scheduling Recipe</label>
    <listViews>
        <fullName>FSL__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Scheduling Recipe Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scheduling Recipes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>